--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octopus</title>
 
-<script type="module" src="./assets/index.3ce1d232.js"></script>
 
 
 <link rel="stylesheet" href="./assets/style.6b8e8c17.css">
@@ -14,8 +13,9 @@
 </head>
 <body>
   <div id="app"></div>
+  
 </body>
-
+<script type="module" src="./assets/index.7794437e.js"></script>
 <!--    从iconfont里复制过来的在线链接-->
-<script type="module" src="//at.alicdn.com/t/c/font_3448725_q0rlk38cj2.js"></script>
+<script src="//at.alicdn.com/t/c/font_3448725_q0rlk38cj2.js"></script>
 </html>
